Fix padding on mobile header

--- a/src/components/Header/HeaderMobile.css
+++ b/src/components/Header/HeaderMobile.css
@@ -112,8 +112,8 @@
   right: 0;
   top: 0;
 
-  padding-left: 32px;
-  padding-right: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
   width: 100vw;
   height: 100vh;
 
